# django-liquidb

./: .gitignore  LICENSE.md  README.md  README.rst  conftest.py  manage.py  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
liquidb/: admin.py  apps.py  consts.py  db_tools.py  models.py  pylint_settings.py  settings.py
liquidb/management/: __init__.py  consts.py
liquidb/management/commands/: _private.py  checkout_latest_snapshot.py  checkout_snapshot.py  checkout_to_latest_snapshot.py  checkout_to_savepoint.py  create_migration_snapshot.py  delete_snapshot_by_name.py  delete_snapshot_history.py  list_snapshots.py  snapshot_migration_state.py
liquidb/migrations/: 0001_initial.py
tests/: test_admin_view.py  test_checkout_snapshot.py  test_create_snapshot.py  test_delete_snapshot_by_name.py  test_delete_snapshot_history.py  test_get_latest_applied.py  test_hash.py  test_migration_hash.py  test_settings.py  tools_tests.py
