[project]
name = "django-liquidb"
version = "0.3"
description = "Liquidb is a Django app that simplifies migration management."
dependencies = [
    "django>=3.2"
]
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries"
]
authors = [
  {name = "Vitalii Gusakovskiy"}
]

[project.urls]
Repository =  "https://github.com/Gusakovskiy/django-liquidb"

[project.optional-dependencies]
dev = [
    "pylint>=2.7.2",
    "pytest>=6.2.4",
    "pytest-cov>=2.11.1",
    "pylint-django>=2.5.3",
    "mock>=4.0.3",
    "pytest-django>=4.1.0",
    "beautifulsoup4>=4.9.3",
    "black>=21.5b0",
    "twine>=4.0.2",
    "twine",
    "pip-tools"
]

[build-system]
requires = ["setuptools>=68.2.0", "wheel"]
build-backend = "setuptools.build_meta"
