[project]
name = "django-liquidb"
version = "0.4"
description = "Liquidb is a Django app that simplifies migration management."
readme = "README.rst"
dependencies = [
    "django>=3.2"
]
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries"
]
authors = [
  {name = "Vitalii Gusakovskiy"}
]

[project.urls]
Repository =  "https://github.com/Gusakovskiy/django-liquidb"
Source = "https://pypi.org/project/django-liquidb/"

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "pytest-cov",
    "pylint-django",
    "mock",
    "pytest-django",
    "beautifulsoup4",
    "black",
    "twine",
    "build",
    "pip-tools"
]

[build-system]
requires = ["setuptools>=68.2.0", "wheel"]
build-backend = "setuptools.build_meta"
