[metadata]
name = django-liquidb
version = 0.1
description = Liquidb is a Django app that simplifies migration management.
long_description = file: README.rst
author = Vitalii Gusakowski
url=https://github.com/Gusakovskiy/django-liquidb
author_email = v.s.gusakovskiy@gmail.com
license = BSD-3-Clause
license_file = LICENSE.md
python_requires = >3.6
install_requires = django
classifiers = django>=2.2
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: